<resources>
    <string name="app_name">PT Rania Jaya Farmarindo</string>
    <string name="title_home">Home</string>
    <string name="title_barang">Barang</string>
    <string name="title_history">Histori Pemesanan</string>
    <string name="title_chart">Keranjang</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
