<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_barang"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_barang" />

    <item
        android:id="@+id/navigation_chart"
        android:icon="@mipmap/ic_local_grocery_store_black_48dp"
        android:title="@string/title_chart" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@mipmap/ic_assignment_black_48dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@mipmap/ic_account_circle_black_48dp"
        android:title="@string/title_profile" />

</menu>
